--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -8,6 +8,9 @@
 	/* --red: #c81414; */
 	--red: indianred;
 	--light-green: #ABDBA9;
+
+	/* shadows */
+	--default-shadow: 0px 2px 8px 0px rgb(0 0 0 / 20%);
 }
 
 .light-theme {
